# content-judge

./: .env.example  .gitignore  README.md  pyproject.toml
content_judge/: __init__.py  agent.py  cli.py  config.py  llm.py  models.py  prompts.py  report.py
content_judge/loaders/: __init__.py  text.py  video.py
content_judge/tools/: __init__.py  ai_detection.py  distribution.py  hive_client.py  virality.py
docs/: Challenge-Build_a_Judge_Agent.md  design-decisions.md
docs/decisions/: key-decisions.md
docs/plans/: 2026-03-04-interactive-wizard-design.md  2026-03-04-interactive-wizard.md  2026-03-05-presentation-docs.md
docs/presentation/: 00-overview.md  01-architecture.md  02-data-flow.md  03-design-decisions.md  04-deep-dives.md  05-assumptions-and-tradeoffs.md
tests/: test_agent.py  test_cli_wizard.py  test_config_models.py  test_loaders.py  test_models.py  test_tools.py
tests/fixtures/: calibration_ai.txt  calibration_boring.txt  calibration_human.txt  calibration_viral.txt  sample_article.txt
