[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "content-judge"
version = "0.1.0"
description = "AI-powered content judge agent: evaluates content for AI origin, virality potential, and audience fit."
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "requests>=2.31.0",
    "yt-dlp>=2024.0.0",
    "python-dotenv>=1.0.0",
    "InquirerPy>=0.3.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]

[project.scripts]
content-judge = "content_judge.cli:app"
